Corrected text formatting

--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="css/style.css">
-    
-    <title>lw5</title>
+    <title>Tomatos time tracker</title>
   </head>
   <body>
       <script src="js/time-tracker.js"></script>
