fix pause button

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <p><input type="button" class="btn btn-outline-secondary btn-lg" value="Большой перерыв " onclick="return biginterval()">
 		</div>
 		<div class = col-sm-3>
-        <input type="button" class="btn btn-outline-warning btn-lg" id='bpause' onclick="return pause()"> 
+        <input type="button" class="btn btn-outline-warning btn-lg" id='bpause' value="Пауза" onclick="return pause()"> 
 		</div>
 		</div>
 	  </div>
