Correct text formatting

--- a/index.html
+++ b/index.html
@@ -11,22 +11,22 @@
       <script src="js/time-tracker.js"></script>
       <div  id='txt1'></div>
       <form name =  'timer'>
-	  <div class= 'container'>
-	  <div class = 'row'>
-		<div class = col-sm-3>
-        <p><input type="button" class="btn btn-outline-success btn-lg" value=" новый таймер " onclick="return Changetime()">
-		</div>
-		<div class = col-sm-3>
-        <p><input type="button" class="btn btn-outline-secondary btn-lg" value="малый перерыв " onclick="return litleinterval()">
-		</div>
-		<div class = col-sm-3>
-        <p><input type="button" class="btn btn-outline-secondary btn-lg" value="Большой перерыв " onclick="return biginterval()">
-		</div>
-		<div class = col-sm-3>
-        <input type="button" class="btn btn-outline-warning btn-lg" id='bpause' value="Пауза" onclick="return pause()"> 
-		</div>
-		</div>
-	  </div>
+	    <div class= 'container'>
+	      <div class = 'row'>
+		    <div class = col-sm-3>
+              <p><input type="button" class="btn btn-outline-success btn-lg" value=" новый таймер " onclick="return Changetime()">
+		    </div>
+		    <div class = col-sm-3>
+              <p><input type="button" class="btn btn-outline-secondary btn-lg" value="малый перерыв " onclick="return litleinterval()">
+		    </div>
+		    <div class = col-sm-3>
+              <p><input type="button" class="btn btn-outline-secondary btn-lg" value="Большой перерыв " onclick = "return biginterval()">
+		    </div>
+		    <div class = col-sm-3>
+              <input type="button" class="btn btn-outline-warning btn-lg" id='bpause' value="Пауза" > 
+		    </div>
+		  </div>
+	    </div>
       </form>
     <div id='txt2'></div>
   </body>
