--- a/index.html
+++ b/index.html
@@ -14,21 +14,21 @@
 	    <div class= 'container'>
 	      <div class = 'row'>
 		    <div class = col-sm-4>
-              <p><input type="button" class="btn btn-outline-success btn-lg" value=" Новый таймер " onclick="return Changetime()">
+              <p><input type="button" class="btn btn-outline-success btn-lg" value=" Новый таймер " id = 'change'>
 		    </div>
 		    <div class = col-sm-4>
-              <p><input type="button" class="btn btn-outline-secondary btn-lg" value="Малый перерыв " onclick="return litleinterval()">
+              <p><input type="button" class="btn btn-outline-secondary btn-lg" value="Малый перерыв " id = 'litle'>
 		    </div>
 		    <div class = col-sm-3>
-              <input type="button" class="btn btn-outline-warning btn-lg" id='bpause' value="Пауза" onclick = "return pauses()"> 
+              <input type="button" class="btn btn-outline-warning btn-lg" id='bpause' value="Пауза"> 
 		    </div>
       </div>
         <div class = 'row'>
             <div class = col-sm-4>
-                <p><input type="button" class="btn btn-outline-success btn-lg" value="Продолжить таймер" id = 'old' onclick = "return oldtimer()">
+                <p><input type="button" class="btn btn-outline-success btn-lg" value="Продолжить таймер" id = 'old'>
           </div>
           <div class = col-sm-4>
-              <p><input type="button" class="btn btn-outline-secondary btn-lg" value="Большой перерыв " onclick = "return biginterval()">
+              <p><input type="button" class="btn btn-outline-secondary btn-lg" value="Большой перерыв " id = 'big'>
 		    </div>
         </div>
 	    </div>
