--- a/src/index.html
+++ b/src/index.html
@@ -2,13 +2,11 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/bootstrap.css">
-    <link rel="stylesheet" href="css/bootstrap-grid.css">
+    <!-- inject:css -->
+    <!-- endinject -->
     <title>Tomatos Time Tracker</title>
   </head>
   <body>
-      <script src="js/time-tracker.js"></script>
       <div  id='txt1'></div>
       <form name =  'timer'>
 	    <div class= 'container'>
@@ -34,5 +32,7 @@
 	    </div>
       </form>
     <div id='txt2'></div>
+    <!-- inject:js -->
+    <!-- endinject -->
   </body>
 </html>
