--- a/src/index.html
+++ b/src/index.html
@@ -2,13 +2,13 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <link href='css/style.css' rel='stylesheet' type='text/css'>
-    <link href='css/bootstrap.css' rel='stylesheet' type='text/css'>
-    <link href='css/bootstrap-grid.css' rel='stylesheet' type='text/css'>
+     <!-- inject:css -->
+      <!-- endinject -->
     <title>Tomatos Time Tracker</title>
   </head>
   <body>
-    <script src="js/time-tracker.js"></script>
+     <!-- inject:js -->
+     <!-- endinject -->
     <div  id='txt1'></div>
     <form name =  'timer'>
 	    <div class= 'container'>
